package analyzers;

import responses.Response;

public interface Analyzer {
    Response analyze();
}
