@startuml
'https://plantuml.com/class-diagram

interface Analyzer{
    + Response analyze()
}

interface Parser{
    + List<String> parse(String input)
}

interface CodeRepository{
    + Response getCodeIterator()
}

interface CodeIterator{
    + Boolean hasNext()
    + String getNext()
}

interface Tokenizer{
    + Boolean canTokenize()
    + Response tokenize()
}

class LexicAnalyzer{
    + Response analyze()
}

Analyzer <|.. LexicAnalyzer

LexicAnalyzer *.. CodeRepository: repository
LexicAnalyzer *.. Tokenizer: tokenizer
LexicAnalyzer *.. Parser: parser

CodeRepository ..> CodeIterator
@enduml